[gd_scene load_steps=4 format=3 uid="uid://duhrvh7e266jm"]

[ext_resource type="Script" path="res://scenes/ui/batle_over.gd" id="1_8g0fi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vtk4"]
bg_color = Color(0, 0, 0, 0.34902)

[sub_resource type="LabelSettings" id="LabelSettings_k7q8l"]
font_size = 20

[node name="Panel" type="Panel"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_6vtk4")
script = ExtResource("1_8g0fi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Victory!"
label_settings = SubResource("LabelSettings_k7q8l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Awesome!"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 16)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart!"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
